# es_tests

./: .gitignore  Readme.md  Taskfile.yml  devenv.nix  main.py  pyproject.toml
app/: es.py  log.py  report.py  template.py
data/templates/: ignore_malformed.mapping.txt  synthetic-ignore_malformed.mapping.txt
data/tests/: numbers.yaml  objects.yaml
envs/app/: .env  .envrc
envs/default.ignore_malformed/: .env  .envrc
envs/default.synthetic-ignore_malformed/: .env
envs/elastic/: .env
envs/everything.ignore_malformed/: .env
envs/everything.no_settings/: .env
reports/: 8.7.1.default.ignore_malformed.json  8.7.1.default.synthetic-ignore_malformed.json  8.7.1.everything.ignore_malformed.json  8.7.1.everything.no_settings.json  8.7.1.everything.synthetic-ignore_malformed.json  8.8.0-SNAPSHOT.default.synthetic-ignore_malformed.json  8.8.0-SNAPSHOT.everything.ignore_malformed.json  8.9.0-SNAPSHOT.default.ignore_malformed.json  8.9.0-SNAPSHOT.everything.ignore_malformed.json  8.9.0-SNAPSHOT.everything.synthetic-ignore_malformed.json  default.ignore_malformed.md  default.synthetic.ignore_malformed.md  everything.ignore_malformed.md  everything.no_settings.md  everything.synthetic.ignore_malformed.md  report.md
summaries/: 8.7.1.default.synthetic-ignore_malformed.md  8.7.1.everything.ignore_malformed.md  8.7.1.everything.synthetic-ignore_malformed.md  8.8.0-SNAPSHOT.default.ignore_malformed.md  8.8.0-SNAPSHOT.everything.ignore_malformed.md  8.8.0-SNAPSHOT.everything.no_settings.md  8.8.0-SNAPSHOT.everything.synthetic-ignore_malformed.md
(+15 files in other folders)
